Added Recipe1 link + Description + recipe1 images + recipe1 ingredient list + different recipe links.

--- a/veganbrownies.html
+++ b/veganbrownies.html
@@ -4,9 +4,36 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>VeganBrownies</title>
 </head>
 <body>
     
+    <h1>Vegan Brownies</h1>
+    <a href="https://www.allrecipes.com/recipe/68436/vegan-brownies/">Vegan Brownies</a>
+    <img src="C:\Users\Isaiah\repos\vegan-brownie-stack" alt="vegan-brownie-stack">
+    <h3>Description</h3>
+    <p>
+        Vegan brownies are a delicious alternative for people with egg or dairy allergies! Their gooey texture and full chocolatey flavor fills your mouth with the comfort of home and joy with loved ones.
+    </p>
+    <h2>Ingredients</h2>
+    <ol>
+        <li>I1</li>
+        <li>I2</li>
+        <li>I1</li>
+        <li>I2</li>
+        <li>I1</li>
+        <li>I2</li>
+        <li>I1</li>
+        <li>I2</li>
+
+    </ol>
+
+    <ul>
+        <li><a href="recipe">other recipe 1</a></li>
+        <li><a href="recipe">other recipe 2</a></li>
+        <li><a href="recipe">other recipe 3</a></li>
+    </ul>
+
+
 </body>
 </html>
