index.html made into vegan chocolate chip cookie recipe site and VGFBrownie recipe site copied from index.html and completed.

--- a/index.html
+++ b/index.html
@@ -9,5 +9,43 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="https://www.allrecipes.com/recipe/68436/vegan-brownies/">Vegan chocolate chip oatmeal cookies</a>
+    <img src="C:\Users\Isaiah\repos\vegan-choc-chip-oat-cookies2" alt="vegan-choc-chip-oat-cookies2">
+    
+    <h3>Description</h3>
+    <p>
+        Vegan chocolate chip oatmeal cookies are a delicious alternative for people with egg or dairy allergies! The chewey texture and delicious rich chocolate chips take back to warm sunday afternoons at your grandma's house.
+    </p>
+
+    <h2>Ingredients</h2>
+    <ul>
+        <li>1 cup white sugar</li>
+        <li>⅓ cup soy milk</li>
+        <li>⅓ cup peanut butter</li>
+        <li>2 tablespoons canola oil</li>
+        <li>1 teaspoon pure vanilla extract</li>
+        <li>1 cup whole wheat flour</li>
+        <li>1 cup rolled oats</li>
+        <li>½ teaspoon baking soda</li>
+        <li>½ teaspoon salt</li>
+        <li>½ cup vegan semi-sweet chocolate chips</li>
+        <li>½ cup walnut pieces</li>
+    </ul>
+
+    <h2>Directions</h2>
+    <ol>
+        <li>Preheat oven to 425 degrees F (220 degrees C). Oil a large baking sheet.</li>
+        <li>Stir sugar, soy milk, peanut butter, canola oil, and vanilla extract together with a whisk in a large bowl until completely smooth.</li>
+        <li>Mix flour, oats, baking soda, and salt in a separate bowl; add to the peanut butter mixture and stir to combine. Fold chocolate chips and walnut pieces into the flour mixture.</li>
+        <li>Drop your batter by large spoonfuls onto prepared baking sheet.</li>
+        <li>Bake cookies in preheated oven until browned along the edges, about 10 minutes. Cool cookies on sheet for 10 minutes before removing to a cooling rack to cool completely.</li>
+    </ol>
+
+    <ul>
+        <li><a href="recipe">other recipe 1</a></li>
+        <li><a href="recipe">other recipe 2</a></li>
+        <li><a href="recipe">other recipe 3</a></li>
+    </ul>
+
 </body>
 </html>
