--- a/veganbrownies.html
+++ b/veganbrownies.html
@@ -4,28 +4,41 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VeganBrownies</title>
+    <title>VGFBrownies</title>
 </head>
 <body>
     
-    <h1>Vegan Brownies</h1>
+    <h1>Vegan Gluten-Free Brownies</h1>
     <a href="https://www.allrecipes.com/recipe/68436/vegan-brownies/">Vegan Brownies</a>
-    <img src="C:\Users\Isaiah\repos\vegan-brownie-stack" alt="vegan-brownie-stack">
+    <img src="C:\Users\Isaiah\repos\vegan-gluten-free-brownies" alt="vegan-gluten-free-brownies">
     <h3>Description</h3>
     <p>
         Vegan brownies are a delicious alternative for people with egg or dairy allergies! Their gooey texture and full chocolatey flavor fills your mouth with the comfort of home and joy with loved ones.
     </p>
     <h2>Ingredients</h2>
-    <ol>
-        <li>I1</li>
-        <li>I2</li>
-        <li>I1</li>
-        <li>I2</li>
-        <li>I1</li>
-        <li>I2</li>
-        <li>I1</li>
-        <li>I2</li>
+    <ul>
+        <li>2 cups gluten-free all-purpose flour</li>
+        <li>1 ½ cups maple syrup</li>
+        <li>¾ cup dark cocoa powder</li>
+        <li>¾ teaspoon gluten-free baking powder</li>
+        <li>1 teaspoon salt</li>
+        <li>1 cup mashed bananas</li>
+        <li>¼ cup unsweetened coconut milk</li>
+        <li>¼ cup olive oil</li>
+        <li>1 teaspoon vanilla extract</li>
+        <li>1 cup vegan dark chocolate chips</li>
+        <li>½ cup cocoa nibs</li>
 
+    </ul>
+
+    <h2>Directions</h2>
+    <ol>
+        <li>Preheat the oven to 350 degrees F (175 degrees C). Grease a 9x13-inch baking dish.</li>
+        <li>Combine flour, maple syrup, cocoa powder, baking powder, and salt in a large bowl; blend well and make a well in the center.</li>
+        <li>Combine mashed bananas, coconut milk, olive oil, and vanilla extract in a second bowl.</li>
+        <li>Pour banana mixture into the flour mixture and stir until batter is evenly mixed. </li>
+        <li>Fold in chocolate chips. Pour batter into the prepared baking dish and sprinkle with cocoa nibs.</li>
+        <li>Bake in the preheated oven until a toothpick inserted in the center comes out clean, about 30 minutes. Let cool completely before slicing.</li>
     </ol>
 
     <ul>
