vgfbrownies.html links updated and ketocheesecakecups.html ingredients and directions updated.

--- a/vgfbrownies.html
+++ b/vgfbrownies.html
@@ -9,11 +9,12 @@
 <body>
     
     <h1>Vegan Gluten-Free Brownies</h1>
-    <a href="https://www.allrecipes.com/recipe/68436/vegan-brownies/">Vegan Brownies</a>
+    <a href="https://www.allrecipes.com/recipe/276515/gluten-free-vegan-dark-chocolate-brownies/">Vegan Gluten-Free Brownies</a>
     <img src="C:\Users\Isaiah\repos\vegan-gluten-free-brownies" alt="vegan-gluten-free-brownies">
+    
     <h3>Description</h3>
     <p>
-        Vegan brownies are a delicious alternative for people with egg or dairy allergies! Their gooey texture and full chocolatey flavor fills your mouth with the comfort of home and joy with loved ones.
+        Vegan Gluten-Free brownies are a delicious alternative for people with egg, gluten, and dairy allergies! It's gooey texture and robust chocolate flavor takes you on an unforgettable journey made for the most avid chocolate lovers.
     </p>
     <h2>Ingredients</h2>
     <ul>
