updated image links

--- a/ketocheesecakecups.html
+++ b/ketocheesecakecups.html
@@ -4,15 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>KetoCheeseCakeCups</title>
+    <link rel="stylesheet" href="">
+    <title>KetoCheeseCakeCupcakes</title>
 </head>
 <body>
     
-    <h1>Keto Cheese Cake Cups</h1>
+    <h1>Keto Cheesecake Cupcakes</h1>
     <a href="https://www.allrecipes.com/recipe/239793/keto-cheesecake-cupcakes/">Keto Cheese Cake Cups</a>
-    <img src="C:\Users\Isaiah\repos\keto-cheesecake-cups2" alt="keto-cheesecake-cupcakes">
+    <img src="https://imagesvc.meredithcorp.io/v3/mm/image?url=https%3A%2F%2Fimages.media-allrecipes.com%2Fuserphotos%2F9078963.jpg&q=60&c=sc&orient=true&poi=auto&h=512" alt="keto-cheesecake-cupcakes">
     
-    <h3>Description</h3>
+    <h2>Description</h2>
     <p>
         Keto cheesecake cupcakes are a healthier spin on the typical delicious dairy confection! If their light fluffy texture doesn't drive you crazy, their rich flavoring definitely will! Add in delicious nuts and fruit sauces and be prepared for an unforgettable flavor experience!
     </p>
@@ -36,9 +37,9 @@
     </ol>
 
     <ul>
-        <li><a href="recipe">other recipe 1</a></li>
-        <li><a href="recipe">other recipe 2</a></li>
-        <li><a href="recipe">other recipe 3</a></li>
+        <li><a href="\\wsl$\Ubuntu\home\injones27\repos\odin-recipes">other recipe 1</a></li>
+        <li><a href="\\wsl$\Ubuntu\home\injones27\repos\odin-recipes">other recipe 2</a></li>
+        <li><a href="\\wsl$\Ubuntu\home\injones27\repos\odin-recipes">other recipe 3</a></li>
     </ul>
 
 
