Finalized all html document images.

--- a/vgfbrownies.html
+++ b/vgfbrownies.html
@@ -10,7 +10,7 @@
     
     <h1>Vegan Gluten-Free Brownies</h1>
     <a href="https://www.allrecipes.com/recipe/276515/gluten-free-vegan-dark-chocolate-brownies/">Vegan Gluten-Free Brownies</a>
-    <img src="C:\Users\Isaiah\repos\vegan-gluten-free-brownies" alt="vegan-gluten-free-brownies">
+    <img src="https://www.allrecipes.com/thmb/wBQ0jI3HyYHRZKPWV3jfZyGuvzM=/750x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/7107369-24ef21830ef548c7b20654ad44e99336.jpg" alt="vegan-gluten-free-brownies">
     
     <h3>Description</h3>
     <p>
